<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/mainTextLogin"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/loginTextLogin"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/emailLabelLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:hint="@string/email_login_hint"
        app:boxCornerRadiusBottomEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/corner_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_login_label"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLogin"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:layout_height="wrap_content"
        android:hint="@string/password_login_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="@dimen/corner_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomEnd="@dimen/corner_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButtonLogin"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        app:cornerRadius="15dp"
        android:hint="@string/login_button"
        android:textColorHint="@color/black"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/andText"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginNumberButton"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/login_with_number_button"
        android:textColorHint="@color/black"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        app:cornerRadius="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_account_text"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/registerButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_button"
        android:textColor="@color/blue"
        android:layout_marginTop="-19dp"
        android:layout_marginStart="190dp"/>

    <TextView
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text_button"
        android:textColor="@color/blue"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"/>


</LinearLayout>