<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/hello_text_register"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/register_text_register"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/phone_number_register_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputRegister"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:hint="@string/phone_number_register_hint"
        app:boxCornerRadiusBottomEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/corner_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/username_register_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userInputRegister"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:hint="@string/username_register_hint"
        app:boxCornerRadiusBottomEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/corner_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEditRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/email_register_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputRegister"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:hint="@string/email_register_hint"
        app:boxCornerRadiusBottomEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/corner_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_register_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputRegister"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:hint="@string/password_register_hint"
        app:boxCornerRadiusBottomEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/corner_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_edit_text"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_button"
        android:backgroundTint="@color/blue_200"
        android:hint="@string/register_text_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/black"
        app:cornerRadius="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/have_acc_register_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/loginButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="-19dp"
        android:text="@string/login_text_button"
        android:textColor="@color/blue" />

</LinearLayout>