<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.OrderFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/orderToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Бронь" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/empty_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:text="@string/helper_text_order"
        android:textAlignment="center"
        android:textColor="@color/black_500"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/blue"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/order_button"
        android:textSize="12sp"
        app:cornerRadius="10dp" />

</LinearLayout>